tests/return/at_top_level.out
[31merror[error]: 'return' outside function
----- Traceback -----
  ┌─ <unknown>:1:0
  | 
1 | return "wat" # Error at 'return': Can't return from top-level code.
  | ^
[0m